2005-03-08  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Begin support of IPMI 2.0 by adding IPMI 2.0 Get
	Authentication Capabilities into protocol state machine.  Change
	-R option to -M option.  Add new -R option.

2005-03-07  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-comp-code-spec.h,
	libfreeipmi/src/ipmi-error.c (ipmi_strerror_r): Support for more
	commands under the rmcpplus support and payload commands section.
	General code cleanup.

	* libfreeipmi/include/freeipmi/ipmi-rmcpplus-support-and-payload-cmds.h,
	libfreeipmi/src/ipmi-rmcpplus-support-and-payload-cmds.c: New
	templates and functions to support commands under this chapter of
	the IPMI spec.

	* common/src/Makefile.am, libfreeipmi/include/Makefile.am: Fix
	distcheck bugs.

	* Globally fix gcc 4.0 warnings.

	* libfreeipmi/include/freeipmi/ipmi-sol-cmds.h,
	fish/extensions/bc-common.scm (sol-bit-rates),
	fish/extensions/bc-sol-conf-section.scm: Support bit-rate '0'
	which means "Use Serial Bit rate".

	* libfreeipmi/src/ipmi-messaging-support-cmds.c: Fix out of order
	bug with template fields in
	tmpl_cmd_get_channel_authentication_capabilities_v20_rs.

	* ipmiping/src/ipmiping.c (parsepacket): Fix output to match
	earlier output.

2005-03-06  Albert Chu <chu11@llnl.gov>

	Collective fixes from branch al_ipmi_2_0_branch at tag
	al_ipmi_2_0_branch_final.  See ChangeLog in branch for detailed
	day by day changes.
	
	LIBFREEIPMI

	* libfreeipmi/include/freeipmi/ipmi-rmcpplus.h,
	libfreeipmi/src/ipmi-rmcpplus.c,
	libfreeipmi/include/freeipmi/ipmi-rmcpplus-crypt.h,
	libfreeipmi/src/ipmi-rmcpplus-crypt.c,
	libfreeipmi/src/ipmi-rmcpplus-debug.c,
	libfreeipmi/include/freeipmi/ipmi-rmcpplus-interface.h,
	libfreeipmi/src/ipmi-rmcpplus-interface.c,
	libfreeipmi/include/freeipmi/ipmi-rmcpplus-utils.h
	libfreeipmi/src/ipmi-rmcpplus-support-and-payload-cmds.c,
	libfreeipmi/include/freeipmi/ipmi-rmcpplus-support-and-payload-cmds.h,
	libfreeipmi/src/ipmi-rmcpplus-utils.c,