@@ -1,19 +1,55 @@
 sbin_PROGRAMS=ipmipower
-ipmipower_SOURCES=argv.c cbuf.c conffile.c error.c fd.c hostlist.c hprintf.c \
-	ipmipower_authentication.c ipmipower_check.c ipmipower_config.c \
-	ipmipower_connection.c ipmipower.c ipmipower_output.c \
-	ipmipower_packet.c ipmipower_ping.c ipmipower_powercmd.c \
-	ipmipower_privilege.c ipmipower_prompt.c ipmipower_util.c \
-	ipmipower_wrappers.c list.c wrappers.c
+ipmipower_SOURCES= \
+	argv.c \
+	cbuf.c \
+	conffile.c \
+	error.c \
+	fd.c \
+	hostlist.c \
+	hprintf.c \
+	ipmipower_authentication.c \
+	ipmipower_check.c \
+	ipmipower_config.c \
+	ipmipower_connection.c \
+	ipmipower.c \
+	ipmipower_ipmi_version.c \
+	ipmipower_output.c \
+	ipmipower_packet.c \
+	ipmipower_ping.c \
+	ipmipower_powercmd.c \
+	ipmipower_privilege.c \
+	ipmipower_prompt.c \
+	ipmipower_util.c \
+	ipmipower_wrappers.c \
+	list.c \
+	wrappers.c
  
 ipmipower_LDADD = ../../libfreeipmi/src/libfreeipmi.la
  
-noinst_HEADERS=argv.h cbuf.h conffile.h error.h fd.h hostlist.h hprintf.h \
-	ipmipower_authentication.h ipmipower_check.h ipmipower_config.h \
-	ipmipower_connection.h ipmipower.h ipmipower_output.h \
-	ipmipower_packet.h ipmipower_ping.h ipmipower_powercmd.h \
-	ipmipower_privilege.h ipmipower_prompt.h ipmipower_util.h \
-	ipmipower_wrappers.h list.h wrappers.h
+noinst_HEADERS= \
+	argv.h \
+	cbuf.h \
+	conffile.h \
+	error.h \
+	fd.h \
+	hostlist.h \
+	hprintf.h \
+	ipmipower_authentication.h \
+	ipmipower_check.h \
+	ipmipower_config.h \
+	ipmipower_connection.h \
+	ipmipower.h \
+	ipmipower_ipmi_version.h \
+	ipmipower_output.h \
+	ipmipower_packet.h \
+	ipmipower_ping.h \
+	ipmipower_powercmd.h \
+	ipmipower_privilege.h \
+	ipmipower_prompt.h \
+	ipmipower_util.h \
+	ipmipower_wrappers.h \
+	list.h \
+	wrappers.h
  
 AM_CFLAGS = -Wall -I$(srcdir)/../../libfreeipmi/include -D_GNU_SOURCE \
 	-DPATH_CFG=\"$(sysconfdir)\" -DDATADIR=\"$(datadir)\" \
